feat: configure project Jira mappings (#68)
